--- a/photography.html
+++ b/photography.html
@@ -32,20 +32,37 @@
     </h1>
 </section>
 
-<div class="drawingcontainer">
-    <div class="photographyimg">
-        <img src="images/Giants.jpg" alt="Giants" width="450px" height="450px">
-        <img src="images/England.jpg" alt="Chester,England" width="450px" height="450px">
-        <img src="images/sd.jpg" alt="San Diego" width="450px" height="450px">
-    </div>
+<div class="photographytrio">
+        <img class="giantsgame" src="images/Giants.jpg" alt="Giants" width="400px" height="400px">
+        <img class="chester" src="images/England.jpg" alt="Chester,England" width="400px" height="400px">
+        <img class="sd" src="images/sd.jpg" alt="San Diego" width="400px" height="400px">
 </div>
-            
-<div class="text">
-    <div class="photographytext">
-        <p class="pt-serif-regular">Photography taught me the importance of finding the best angle and editing photos. Through improving the fundamentals of photography, my Adobe Photoshop skills have also grown. My photography is more focused on the natural world as well as authenticity. </p>
+
+<div class="photographycontainer">
+    <div class="photographycolumn1">
+        <div class="photographytext1">
+            <h2>
+                Capturing the Beauty of Life
+            </h2>
+           <p class="pt-serif-regular">Photography taught me the importance of finding the best angle and editing photos. Through improving the fundamentals of photography, my Adobe Photoshop skills have also grown. My photography is more focused on the natural world as well as authenticity. I love photography because of the ability to capture a moment in time so that I can look back on it. The images I have featured on this page are some of my favorite photos that I've taken from trips and events. Every image captured opens a window to my perspective of the event and/or trip. I see photography as a window for others to peer into your life and to experience a slice of your experiences. </p>
+        </div>
+    </div>
+    <div class="photographycolumn2">
+        <img class="milebeach" src="images/17mile.jpg" alt="17mile" height="300px" width="300px">
+        <img class="goldenbridge" src="images/ggb.jpg" alt="Golden Gate Bridge" width="300px" height="300px">
     </div>
 </div>
 
-       
+<div class="photographytrio">
+    <img src="images/camp.jpg" alt="Camping" width="400px" height="400px">
+    <img src="images/pofa.png" alt="Palace of Fine Arts" width="400px" height="400px">
+    <img src="images/scsunset.jpg" alt="Santa Cruz Sunset" width="400px" height="400px">
+</div>
+
+<div class="photographytrio3">
+    <img src="images/drive.jpg" alt="Sunset During drive" width="750px" height="400px">
+    <img src="images/hb.jpg" alt="Huntington Beach Sunset" width="450px" height="400px">
+</div>
+
 </body>
 </html>
