--- a/about_me.html
+++ b/about_me.html
@@ -59,5 +59,11 @@
     </ol>
 </section>
 
+<section>
+    <footer>
+        Austin's Moderately Designed Portolio
+    </footer>
+</section>
+
 </body>
 </html>
