--- a/graphic_design.html
+++ b/graphic_design.html
@@ -72,5 +72,11 @@
     <img class="slicetrio2" src="images/slice5.png" alt="Slice IG Post 3" width="450px" height="450px">
 </div>
 
+<section>
+    <footer>
+        Austin's Moderately Designed Portolio
+    </footer>
+</section>
+
 </body>
 </html>
