--- a/photography.html
+++ b/photography.html
@@ -33,9 +33,9 @@
 </section>
 
 <div class="photographytrio">
-        <img class="giantsgame" src="images/Giants.jpg" alt="Giants" width="400px" height="400px">
-        <img class="chester" src="images/England.jpg" alt="Chester,England" width="400px" height="400px">
-        <img class="sd" src="images/sd.jpg" alt="San Diego" width="400px" height="400px">
+        <img src="images/Giants.jpg" alt="Giants" width="400px" height="400px">
+        <img src="images/sd.jpg" alt="San Diego, CA" width="400px" height="400px">
+        <img src="images/England.jpg" alt="Chester,England" width="400px" height="400px">
 </div>
 
 <div class="photographycontainer">
@@ -53,16 +53,25 @@
     </div>
 </div>
 
-<div class="photographytrio">
-    <img src="images/camp.jpg" alt="Camping" width="400px" height="400px">
-    <img src="images/pofa.png" alt="Palace of Fine Arts" width="400px" height="400px">
-    <img src="images/scsunset.jpg" alt="Santa Cruz Sunset" width="400px" height="400px">
+<section>
+    <h2>
+        Photography Gallery
+    </h2>
+</section>
+<div class="photographygallery">
+    <div class="photographygalphotos">
+        <img src="images/hb.jpg" alt="Huntington Beach Sunset" width="400px" height="400px">
+        <img src="images/pofa.png" alt="Palace of Fine Arts" width="400px" height="400px">
+        <img src="images/scsunset.jpg" alt="Santa Cruz Sunset" width="400px" height="400px">
+        <img src="images/scsunset2.jpg" alt="Santa Cruz Sunset2" width="400px" height="400px">
+    </div>
 </div>
 
-<div class="photographytrio3">
-    <img src="images/drive.jpg" alt="Sunset During drive" width="750px" height="400px">
-    <img src="images/hb.jpg" alt="Huntington Beach Sunset" width="450px" height="400px">
-</div>
+<section>
+    <footer>
+        Austin's Moderately Designed Portfolio
+    </footer>
+</section>
 
 </body>
 </html>
