--- a/drawing.html
+++ b/drawing.html
@@ -63,11 +63,17 @@
 <div>
     <h2 id="otherdrawings">Other Designs Made By Me</h2>
 </div>
-<div class="slicetrio">
+<div class="drawingtrio">
     <img class="stilllife2" src="images/Still Life 2.jpg" alt="Still Life 2" width="450px" height="450px">
     <img class="sketch" src="images/Sketch.jpg" alt="sketch" width="450px" height="450px">
     <img class="tree" src="images/Tree Drawing.jpg" alt="Tree Drawing" width="450px" height="450px">
 </div>
+
+<section>
+    <footer>
+        Austin's Moderately Designed Portolio
+    </footer>
+</section>
 
 </body>
 </html>
