--- a/about_me.html
+++ b/about_me.html
@@ -51,10 +51,10 @@
 <section class="aboutlist">
     <ol>
         <li>I play basketball around 2 times a week. I often try to run some games at the Mashouf Wellness Center becuase there are usually people there looking for some competition. </li>
-        <li>I am also really interested in photography. In the <a href="./photography.html">photography</a> page, I highlight some of my amateur work. I often try to focus on scenery instead of portraits or images of people. I am still trying to learn how to perfect my camera work, but with time, I will achieve that goal.</li>
+        <li>I am also really interested in photography. In the <a href="./photography.html">photography</a> page, I showcase some of my amateur work. I often try to focus on scenery instead of portraits or images of people. My skills are still developing and hopefully I will perfect them one day; however, with time, I will achieve that goal.</li>
         <li>I love to collect sports and Pokemon cards, but it is an expensive hobby. My goal is to continue to collect high value cards and resell them in the future. I am hoping that the players in the sports cards I have will reach the Hall of Fame in their sports so that the value will skyrocket. Regarding the Pokemon cards, I am aiming to find and purchase the more rare cards.</li>
         <li>My favorite movie is A24's <a class="VidLink" href="https://youtu.be/wxN1T1uxQ2g?si=C900j75HzCtZErnw" target="_blank"><em>Everything Everywhere All At Once.</em></a>
-        </a>The camera work as well as plot are incredibly executed; the cast that the producers chose were incredible too. I understand why the film received so many awards.
+        </a>The camera work as well as plot are incredibly executed; the cast that the producers chose were incredible too. I understand why the film received so many awards. My favorite character from the film is Waymond beceause of his kindness and personality. He approaches conflict not with anger, but with kindness which is unorthodox.
         </li>
     </ol>
 </section>
