--- a/graphic_design.html
+++ b/graphic_design.html
@@ -66,10 +66,10 @@
 <div>
     <h2 id="otherdesigns">Other Designs Made By Me</h2>
 </div>
-<div class="slicetrio">
-    <img class="logoblack" src="images/logo2.png" alt="Logo Black BG" width="450px" height="450px">
-    <img class="book2" src="images/rendering2.png" alt="Book Rendering" width="450px" height="450px">
-    <img class="slicetrio2" src="images/slice5.png" alt="Slice IG Post 3" width="450px" height="450px">
+<div class="designtrio">
+    <img class="logoblack" src="images/logo2.png" alt="Logo Black BG" width="400px" height="400px">
+    <img class="book2" src="images/rendering2.png" alt="Book Rendering" width="400px" height="400px">
+    <img class="slicetrio2" src="images/slice5.png" alt="Slice IG Post 3" width="400px" height="400px">
 </div>
 
 <section>
