Chester england photo

--- a/photography.html
+++ b/photography.html
@@ -35,7 +35,7 @@
 <div class="photographytrio">
         <img src="images/Giants.jpg" alt="Giants" width="400px" height="400px">
         <img src="images/sd.jpg" alt="San Diego, CA" width="400px" height="400px">
-        <img src="images/England.jpg" alt="Chester,England" width="400px" height="400px">
+        <img src="images/england.JPG" alt="Chester,England" width="400px" height="400px">
 </div>
 
 <div class="photographycontainer">
